gitops/manifests/py-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-py-api
  labels:
    tenant: py-api
