gitops/manifests/py-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-api
  namespace: app-py-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py-api
  template:
    metadata:
      labels:
        app: py-api
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: py-api
          image: 242626138899.dkr.ecr.us-east-1.amazonaws.com/mini-paas/py-api:05a39963f34d461523fa15b497ac14ef378f349a
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
