gitops/manifests/py-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-api
  namespace: app-py-api
spec:
  selector:
    app: py-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
